# libiap

./: meson.build
docs/: log.txt
docs/wireplumber.conf.d/: 01-exclude-ipod.conf
src/: artwork.cpp  artwork.hpp  context.hpp  flac.cpp  flac.hpp  main.cpp  platform-macros.h  platform.cpp  platform.hpp  track.cpp  track.hpp
src/emu/: artwork.cpp  cast.hpp  endian.hpp  hid.cpp  iap.cpp  iap.hpp  main.cpp  pw.cpp  pw.hpp  spec  types.hpp
src/iap/: _iap.h  bool.h  constants.h  context.h  debug.c  endian.h  fid-token-values.c  hid.c  iap.c  iap.h  macros.h  notification.c  pack-util.h  platform-macros.h  platform.h  span.c  span.h  vector.c  vector.h
src/iap/spec/lingoes/: extended-interface.h
src/iap/spec/lingoes/digital-audio/: accessory-sample-rate-caps.h
src/iap/spec/lingoes/display-remote/: artwork-formats.h  indexed-eq-profile-name.h  indexed-playing-track-info.h  ipod-state.h  set-current-playing-track.h  track-artwork-times.h
src/iap/spec/lingoes/extended-interface/: color-display-image-limits.h  current-playing-track-chapter.h  indexed-playing-track-info.h  indexed-playing-track-string.h  play-status-change-notification.h
src/iap/spec/lingoes/general/: acc-auth-sig.h  acc-info.h  event-notification.h  ipod-auth-sig.h  ipod-name.h  ipod-preferences.h  now-playing-app-bundle-name.h
src/iap/spec/lingoes/general/fid-token-values/: identify.h
